test/fail/enums_and_variants/match_else_too_early.lly
#[
SyntaxError: 'else' cannot be the only clause within a match.
    from match_else_too_early.lly:7
]#

match Some(1): {
    else:
}
